<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>openapi-generator-parent</artifactId>
        <groupId>io.github.potjerodekool</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>compiler-plugin</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <autoservice.version>1.0.1</autoservice.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.auto.service</groupId>
            <artifactId>auto-service</artifactId>
            <version>1.0.1</version>
            <optional>true</optional>
        </dependency>

        <!--
        C:\Program Files\Eclipse Adoptium\jdk-17.0.1.12-hotspot\jmods\jdk.compiler.jmod\classes\com\sun\tools\javac\api\
        -->
        <dependency>
            <groupId>jdk</groupId>
            <artifactId>compiler</artifactId>
            <scope>system</scope>
            <version>17</version>
            <!--
            <systemPath>C:\Program Files\Eclipse Adoptium\jdk-17.0.1.12-hotspot\jmods\jdk.compiler.jmod</systemPath>
            -->
            <systemPath>${java.home}/jmods/jdk.compiler.jmod</systemPath>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <fork>true</fork>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>com.google.auto.service</arg>
                        <arg>--add-exports=java.base/jdk.internal.javac=compiler.plugin</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=compiler.plugin</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.file=compiler.plugin</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=compiler.plugin</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=compiler.plugin</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.comp=compiler.plugin</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.main=compiler.plugin</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=compiler.plugin</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=compiler.plugin</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=compiler.plugin</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=compiler.plugin</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=compiler.plugin</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.auto.service</groupId>
                            <artifactId>auto-service</artifactId>
                            <version>${autoservice.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>target/generated-sources</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>